--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,8 @@ npm-debug.log
 # this depending on your deployment strategy.
 /priv/static/
 
+# Secrets
+/config/prod.secret.exs
+
 # OS files
 /.idea
